# Wizardry-engine

./: CMakeLists.txt  README.md  main.cc  vcpkg.json
api/: CMakeLists.txt
api/include/: CircleCollider.h  Engine.h  GraphicManager.h  aabb_system.h  collision.h  const.h  solar_system.h
api/src/: Engine.cc  GraphicManager.cc  collider.cc  collision.cc  solar_system.cc
core/: CMakeLists.txt
core/include/: Body.h  collision.h  collision_grid.h
core/include/Maths/: Mat2.h  Vec2.h  four_vec2.h  quaterions.h  vec3.h  vec4.h
core/src/: body.cc
core/test/maths/: test_mat2.cc  test_vec2.cc  test_vec3.cc  test_vec4.cc
